<resources>
    <string name="app_name">BestELD</string>
    <string name="demo">Demo</string>
    <string name="test">Test</string>
    <string name="radio">Radio</string>
    <string name="help">Help</string>
    <string name="message">Message</string>
    <string name="dot_insp">DOT Insp.</string>
    <string name="empty_email">Please enter email Id.</string>
    <string name="valid_email">Please enter valid email address.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">USER NAME</string>
    <string name="navdeep_gmailcom">navdeep@gmailcom</string>
    <string name="password">PASSWORD</string>
    <string name="_123456778">123456778</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="finding_device">Finding Device</string>
    <string name="now_discoverable_your_device">Now discoverable your device</string>
    <string name="dot">............................................</string>
    <string name="enable_yard_move">Enable Yard Move</string>
    <string name="sleeper">SLEEPER</string>
    <string name="on_duty">ON DUTY</string>
    <string name="off_duty">OFF DUTY</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="hello_i_am_here">Hello i am here</string>
    <string name="notes">Notes</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="enter_password">Please enter password.</string>
    <string name="vehicles">Vehicles</string>
    <string name="odometer">Odometer</string>
    <string name="shipping_nos">Shipping Nos.</string>
    <string name="long_dot">........................................</string>
</resources>