<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:id="@+id/timeHeading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_time"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/end_time"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeShowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeHeading"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:id="@+id/etStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"/>
            <EditText
                android:id="@+id/etEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeShowing"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dot" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dot" />
        </LinearLayout>

        <com.aagito.imageradiobutton.RadioImageGroup
            android:id="@+id/radioGroupDriverStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.aagito.imageradiobutton.RadioImageButton
                android:id="@+id/rbOffDuty"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                app:iconPosition="top"
                app:iconSize="20dp"
                app:iconColor="#99999999"
                app:selectedIconColor="#99999999"
                app:selectedBackgroundColor="@color/white"
                app:drawableIcon="@drawable/sleeper_hdp"
                android:layout_weight="1"
                android:layout_gravity="start"/>

            <com.aagito.imageradiobutton.RadioImageButton
                android:id="@+id/rbOnDuty"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:iconColor="#3D8B15"
                app:selectedIconColor="#3D8B15"
                app:drawableIcon="@drawable/sleeper_hdp"
                app:selectedBackgroundColor="@color/white"
                android:layout_height="@dimen/_40sdp"
                app:iconPosition="top"
                app:iconSize="20dp"
                />
            <com.aagito.imageradiobutton.RadioImageButton
                android:id="@+id/rbSleeper"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_40sdp"
                app:iconPosition="top"
                app:iconSize="20dp"
                app:selectedIconColor="#F7B900"
                app:selectedBackgroundColor="@color/white"
                app:iconColor="#F7B900"
                app:drawableIcon="@drawable/sleeper_hdp"
                android:layout_gravity="end"/>
        </com.aagito.imageradiobutton.RadioImageGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/off_duty"
                android:textSize="@dimen/_12ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/on_duty"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/sleeper"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/rbEnableYardMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/enable_yard_move" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:textColor="@color/black"
            android:text="@string/notes"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:text="Your Location"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableEnd="@mipmap/location"
            android:gravity="bottom"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                app:cornerRadius="@dimen/_4sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="1"
                android:text="@string/confirm"
                app:cornerRadius="@dimen/_4sdp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>